# fitsrotate_rs

./: .gitignore  Cargo.toml  README.md  derotate.sh  make_array.py  pre.sh
.github/workflows/: cargo.yml  rust.yml
src/: main.rs
