[package]
name = "fitsrotate_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
fitsio = { path = "../rust-fitsio/fitsio", features = ["array"]}
fitsio-sys = { path = "../rust-fitsio/fitsio-sys" }
fitsio-derive = { path = "../rust-fitsio/fitsio-derive" }