[package]
name = "fitsrotate_rs"
version = "0.1.4"
edition = "2021"
authors = ["Alec Thomson"]
description = "Rotate FITS images"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlecThomson/fitsrotate_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
fitsio = {features = ["array"], version="0.21.2"}
clap = { version = "4.1.4", features = ["derive"] }

[[bin]]
name = "fitsrotate_rs"
path = "src/main.rs"
